# Portals

./: .gitignore  CMakeLists.txt  main.cpp  player.cpp  player.h  portals.cbp  portals.depend  portals.layout  resources.rc  tools.h
include/: gameObject.h  id.h  particle.h  tile.h
output/: portals_private.res  resources.res
output/res/: resources.res
res/: resources.rc
src/: box.cpp  box.h  gameObject.cpp  gameObject.h  id.h  main.cpp  particle.cpp  particle.h  player.cpp  player.h  tile.cpp  tile.h  tools.cpp  tools.h
